environments/gloo-edge/gateway-api/oss/bookinfo-app/base/bookinfo-https.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo-https
  namespace: bookinfo
  labels:
    example: bookinfo-route
    gateway: https
spec:
  hostnames:
  - "bookinfo.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: productpage
        port: 9080
