environments/gloo-edge/gateway-api/oss/bookinfo-app/base/bookinfo-parent-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo-parent-route
  namespace: bookinfo
  labels:
    example: bookinfo-route
    gateway: https
spec:
  hostnames:
  - "bookinfo.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: '*'
          namespace: bookinfo
          group: gateway.networking.k8s.io
          kind: HTTPRoute
      matches:
        - path:
            type: PathPrefix
            value: /api/bookinfo
